aplicaciones/app1-folders/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-folders-go-web-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1-folders-go-web-app
  template:
    metadata:
      labels:
        app: app1-folders-go-web-app
    spec:
      containers:
      - name: webserver-simple
        image: docker.io/kostiscodefresh/simple-env-app:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
