aplicaciones/app1-folders/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-folders-service
spec:
  type: ClusterIP
  selector:
    app: app1-folders-go-web-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: internal-port
