aplicaciones/app1-folders/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-folders-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
# nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - http:
      paths:
      - path: /pocs/prod/app1-folders
        pathType: Prefix
        backend:
          service:
            name: app1-folders-service
            port:
              number: 8080
